<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Golden Quotes</string>
    <string name="action_settings">Settings</string>
    <string name="authors_list">List of all authors</string>
    <string name="particular_author">Author</string>
    <string name="gamble_button">Gamble</string>
    <string name="favourite">Favourite</string>
    <string name="random_quote_hint">What will inspire you today?\nPress \'Gamble\' button to roll for the quotes...</string>
    <string name="title_activity_author_info">Author info</string>
    <string name="birth_date">Birth date:</string>
    <string name="death_date">Death date:</string>
    <string name="nationality">Nationality:</string>
    <string name="profession">Profession:</string>
    <string name="title_activity_main">Quotes</string>
    <string name="title_activity_author_list">Authors</string>
    <string name="title_activity_help">Help</string>
    <string name="help_text">Sensors\nMain Activity displays chosen in settings sensors. If application is receiving data from particular senors, it is immediately displayed, otherwise you see \'No Data\'\
. Data accuracy depends on hardware quality. Application merely display received data. Another possibility is that your device simply do not support chosen sensor. If so, you get \"Sensor unavailable\" me\
ssage.\n\nData Saving\nIn order to see data history graph you must check that option out in settings. However be aware that it cause chosen sensors to stay active, even if you close application. That may \
drain device battery especially quickly. So always remember to stop saving data if you do not need it. By default this option is turned off.</string>
    <string name="action_help_title">Help</string>
    <string name="title_activity_about">About</string>
    <string name="about_site_header">Visit developer\'s site</string>
    <string name="about_site">www.narfsoftware.pl/en</string>
    <string name="about_email_title">Contact developer</string>
    <string name="about_email">info@narfsoftware.pl</string>
    <string name="logo_description">NarfSoftware Logo</string>
    <string name="action_about_title">About</string>
    <string name="action_share">Share</string>
    <string name="action_favorites">Your favorites</string>
    <string name="about_header">Golden Quotes</string>
    <string name="about_subheader">version 1.3</string>
    <string name="about_text">We\'re looking forward to hearing from you. Email us to report bugs, suggest an improvement or if you want to add a translation. We will be glad if you decide to rate and com\
ment on our apps on Market.</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="share_chooser_title">Share quote with friends</string>
    <string name="app_id">181461588728401</string>
    <string name="toast_no_app_can_handle">There\'s no app which can handle that request!</string>
    <string name="wiki_more_info">More info on wikipedia:</string>
    <string name="featured_quote">Featured quote:</string>
    <string name="title_activity_add_quote">AddQuoteActivity</string>

    <string-array name="action_list">
        <item>Favorites</item>
        <item>Random Quote</item>
    </string-array>

</resources>