<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_action_view_as_list_fav"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_favorites"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_authors_list"
        android:icon="@drawable/ic_action_view_as_list_people"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/authors_list"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_about_title"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>